--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,3 +3,6 @@
 @import "fonts.scss";
 @import "base.scss";
 @import "blocks/main-nav";
+@import "blocks/intro";
+@import "blocks/promo";
+@import "blocks/features";
