--- a/source/sass/base.scss
+++ b/source/sass/base.scss
@@ -19,6 +19,7 @@ body {
   line-height: $line-height;
   font-family: $font-family;
   text-transform: $text-transform;
+  text-align: center;
   word-wrap: break-word;
 }
 
