--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,6 +1,7 @@
 $primary-color: #81b3d2;
-$white: #ffffff;
-$black: #000000;
+$text-color: #000000;
+$second-text-color: #333333;
+$third-text-color: #ffffff;
 $border: 1px solid $black;
 
 $font-family: "PT Sans", arial, sans-serif;
