--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -15,7 +15,7 @@
   padding-bottom: 8px;
 
   text-align: center;
-  color: $white;
+  color: $third-text-color;
 
   @include font-set(18px,40px,bold);
 
@@ -92,7 +92,7 @@
     width: 30px;
     height: 4px;
 
-    background-color: $white;
+    background-color: $third-text-color;
   }
 
   &::before {
