--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -5,6 +5,10 @@
 .features__item {
   padding-left: 20px;
   padding-right: 20px;
+
+  &:nth-of-type(5) {
+    padding-bottom: 35px;
+  }
 }
 
 .features__item p {
@@ -14,21 +18,21 @@
 
 .features__item--blue {
   background-color: $primary-color;
-  color: $white;
+  color: $third-text-color;
   padding-top: 40px;
   padding-bottom: 40px;
   position: relative;
-}
 
-.features__item--blue:first-of-type::before {
-  @include before;
+  &:first-of-type::before {
+    @include before;
 
-  background-image: url("../img/bg-triangle.svg");
-  width: 320px;
-  height: 37px;
-  top: -22px;
-  left: 0;
-  z-index: 40;
+    background-image: url("../img/bg-triangle.svg");
+    width: 320px;
+    height: 37px;
+    top: -22px;
+    left: 0;
+    z-index: 40;
+  }
 }
 
 .features__item--blue:first-of-type .features__title {
@@ -47,30 +51,49 @@
   padding-bottom: 15px;
 }
 
+.features__image {
+  background-color: $primary-color;
+}
+
+.features__image img {
+  display: block;
+}
+
 .features__item--icons {
   text-align: left;
+  padding-left: 69px;
+  padding-top: 29px;
 }
 
 .features__item--icons p {
   color: $second-text-color;
+  padding-top: 5px;
 }
 
-.features__title--house::before {
-  @include before;
+.features__title--house {
+  padding-top: 5px;
 
-  background-image: url("../img/icon-house.svg");
-  width: 38px;
-  height: 36px;
-  left: 0;
+  &::before {
+    @include before;
+
+    background-image: url("../img/icon-house.svg");
+    width: 38px;
+    height: 36px;
+    left: -46px;
+    top: -3px;
+    background-size: 93%;
+  }
 }
 
 .features__title--souvenir::before {
   @include before;
 
   background-image: url("../img/icon-gift.svg");
-  width: 39px;
-  height: 34px;
-  left: 0;
+  width: 32px;
+  height: 38px;
+  left: -43px;
+  top: -11px;
+  background-size: 97%;
 }
 
 .features__title--food::before {
@@ -79,5 +102,18 @@
   background-image: url("../img/icon-burger.svg");
   width: 39px;
   height: 34px;
-  left: 0;
+  left: -50px;
+  top: -5px;
+  background-size: 98%;
+}
+
+.features__item--gray {
+  background-color: #eeeeee;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  border-bottom: 1px solid black;
+}
+
+.features__item--gray p {
+  color: $second-text-color;
 }
