--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -2,7 +2,7 @@ $primary-color: #81b3d2;
 $text-color: #000000;
 $second-text-color: #333333;
 $third-text-color: #ffffff;
-$border: 1px solid $black;
+$border: 1px solid $text-color;
 
 $font-family: "PT Sans", arial, sans-serif;
 $font-size: 14px;
