--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -109,11 +109,19 @@
 
 .features__item--gray {
   background-color: #eeeeee;
-  padding-top: 30px;
-  padding-bottom: 30px;
-  border-bottom: 1px solid black;
+  padding-top: 26px;
+  position: relative;
 }
 
 .features__item--gray p {
   color: $second-text-color;
+}
+
+.features__text {
+  border-bottom: 1px solid #d5d5d5;
+  padding-bottom: 28px;
+}
+
+.features__item--gray:last-of-type .features__text {
+  border-bottom: none;
 }
