--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -9,6 +9,7 @@ $font-size: 14px;
 $line-height: 26px;
 $text-transform: uppercase;
 
+$mobile-width: 320px;
 $tablet-width: 768px;
 $desktop-width: 1150px;
 $mobile-width-only: 767px;
