--- a/source/css/style.css
+++ b/source/css/style.css
@@ -61,6 +61,11 @@ img {
   clip: rect(0 0 0 0);
   overflow: hidden; }
 
+.page-wrapper {
+  width: 320px;
+  margin: 0 auto;
+  background-color: white; }
+
 .main-nav__list {
   width: 100%;
   margin: 0;
@@ -324,3 +329,15 @@ img {
   font-size: 21px;
   line-height: 26px;
   font-weight: bold; }
+
+.map iframe {
+  position: absolute;
+  z-index: 120;
+  width: 100%;
+  height: 350px;
+  border: none; }
+
+.map img {
+  position: relative;
+  display: block;
+  background-color: #d4dcc6; }
