--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,9 +2,11 @@
 @import "mixins.scss";
 @import "fonts.scss";
 @import "base.scss";
+@import "blocks/page-wrapper";
 @import "blocks/main-nav";
 @import "blocks/intro";
 @import "blocks/promo";
 @import "blocks/features";
 @import "blocks/hotel-search";
 @import "blocks/button";
+@import "blocks/map";
