--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,4 +1,6 @@
 $primary-color: #81b3d2;
+$second-color: #669ec0;
+$third-color: #5496bd;
 $text-color: #000000;
 $second-text-color: #333333;
 $third-text-color: #ffffff;
