--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -19,7 +19,7 @@
   justify-content: center;
   align-items: center;
   padding-top: 36px;
-  padding-bottom: 40px;
+  padding-bottom: 33px;
 }
 
 .social__item {
@@ -50,5 +50,29 @@
 
   svg {
     fill: white;
+  }
+}
+
+.page-footer__copyright {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.copyright__text {
+  margin: 0;
+}
+
+.copyright__link {
+  margin-left: 11px;
+  margin-top: 6px;
+
+  &:hover svg,
+  &:focus svg {
+    fill: $primary-color;
+  }
+
+  &:active svg {
+    fill: rgba($text-color, 0.3);
   }
 }
